--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,40 +3,31 @@ name: Create Release
 on:
   push:
     tags:
-      - 'v*'
+      - 'v*.*.*'
 
 jobs:
-  build-and-release:
+  release:
     runs-on: macos-latest
-    
+    permissions:
+      contents: write
+
     steps:
-    - name: Checkout code
+    - name: Checkout repository
       uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
-    
-    - name: Setup Xcode
-      uses: maxim-lobanov/setup-xcode@v1
-      with:
-        xcode-version: 'latest-stable'
-    
-    - name: Show Xcode version
+
+    - name: Get tag name
+      id: get_tag
+      run: echo "TAG=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
+
+    - name: Set up Xcode
+      run: sudo xcode-select -s /Applications/Xcode_16.4.app/Contents/Developer
+
+    - name: Verify Xcode version
+      run: xcodebuild -version
+
+    - name: Build Release App
       run: |
-        echo "Xcode version:"
-        xcodebuild -version
-    
-    - name: Extract version from tag
-      id: version
-      run: |
-        VERSION=${GITHUB_REF#refs/tags/}
-        VERSION=${VERSION#v}
-        echo "version=$VERSION" >> $GITHUB_OUTPUT
-        echo "Extracted version: $VERSION"
-    
-    - name: Build Release
-      working-directory: DesktopApp
-      run: |
-        echo "Building MacForge Release v${{ steps.version.outputs.version }}..."
+        cd DesktopApp
         xcodebuild build \
           -project MacForge.xcodeproj \
           -scheme MacForge \
@@ -45,114 +36,70 @@ jobs:
           -derivedDataPath ./build \
           CODE_SIGN_IDENTITY="" \
           CODE_SIGNING_REQUIRED=NO \
-          CODE_SIGNING_ALLOWED=NO
-    
-    - name: Create Archive
-      working-directory: DesktopApp
+          CODE_SIGNING_ALLOWED=NO \
+          MARKETING_VERSION=${{ steps.get_tag.outputs.TAG }} \
+          CURRENT_PROJECT_VERSION=1
+              
+    - name: Create Release Archive
       run: |
-        echo "Creating archive..."
-        xcodebuild archive \
-          -project MacForge.xcodeproj \
-          -scheme MacForge \
-          -configuration Release \
-          -destination 'platform=macOS' \
-          -archivePath ./build/MacForge.xcarchive \
-          CODE_SIGN_IDENTITY="" \
-          CODE_SIGNING_REQUIRED=NO \
-          CODE_SIGNING_ALLOWED=NO
-    
-    - name: Export App
-      working-directory: DesktopApp
-      run: |
-        echo "Exporting application..."
-        # Create export options plist
-        cat > ./build/ExportOptions.plist << EOF
-        <?xml version="1.0" encoding="UTF-8"?>
-        <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
-        <plist version="1.0">
-        <dict>
-            <key>method</key>
-            <string>mac-application</string>
-            <key>destination</key>
-            <string>export</string>
-            <key>signingStyle</key>
-            <string>automatic</string>
-            <key>stripSwiftSymbols</key>
-            <true/>
-            <key>thinning</key>
-            <string>&lt;none&gt;</string>
-        </dict>
-        </plist>
-        EOF
+        TAG_NAME=${{ steps.get_tag.outputs.TAG }}
+        APP_NAME="MacForge"
+        RELEASE_APP_PATH="DesktopApp/build/Build/Products/Release/${APP_NAME}.app"
+        DIST_DIR="dist"
         
-        xcodebuild -exportArchive \
-          -archivePath ./build/MacForge.xcarchive \
-          -exportPath ./build/export \
-          -exportOptionsPlist ./build/ExportOptions.plist \
-          CODE_SIGN_IDENTITY="" \
-          CODE_SIGNING_REQUIRED=NO \
-          CODE_SIGNING_ALLOWED=NO
-    
-    - name: Create ZIP
+        mkdir -p "${DIST_DIR}"
+        cp -R "${RELEASE_APP_PATH}" "${DIST_DIR}/${APP_NAME}-${TAG_NAME}.app"
+        
+        cd "${DIST_DIR}"
+        zip -r "${APP_NAME}-${TAG_NAME}.zip" "${APP_NAME}-${TAG_NAME}.app"
+        shasum -a 256 "${APP_NAME}-${TAG_NAME}.zip" > "${APP_NAME}-${TAG_NAME}.zip.sha256"
+        
+        echo "RELEASE_ZIP_PATH=${DIST_DIR}/${APP_NAME}-${TAG_NAME}.zip" >> $GITHUB_ENV
+        echo "RELEASE_CHECKSUM_PATH=${DIST_DIR}/${APP_NAME}-${TAG_NAME}.zip.sha256" >> $GITHUB_ENV
+
+    - name: Read Release Notes
+      id: read_release_notes
       run: |
-        echo "Creating ZIP archive..."
-        cd DesktopApp/build/export
-        zip -r "../../../MacForge-v${{ steps.version.outputs.version }}.zip" MacForge.app
-        cd ../../../
-    
-    - name: Create DMG (if create-dmg is available)
-      run: |
-        if command -v create-dmg &> /dev/null; then
-          echo "Creating DMG installer..."
-          create-dmg \
-            --volname "MacForge v${{ steps.version.outputs.version }}" \
-            --volicon "DesktopApp/build/export/MacForge.app/Contents/Resources/AppIcon.icns" \
-            --window-pos 200 120 \
-            --window-size 600 300 \
-            --icon-size 100 \
-            --icon "MacForge.app" 175 120 \
-            --hide-extension "MacForge.app" \
-            --app-drop-link 425 120 \
-            "MacForge-v${{ steps.version.outputs.version }}.dmg" \
-            "DesktopApp/build/export/"
+        if [ -f "RELEASE_NOTES.md" ]; then
+          RELEASE_NOTES=$(cat RELEASE_NOTES.md)
         else
-          echo "create-dmg not available, skipping DMG creation"
+          RELEASE_NOTES="## MacForge ${{ steps.get_tag.outputs.TAG }}
+
+### What's New
+- DDM Blueprints Tool - Complete Device Data Management Blueprint System
+- Enhanced security and GDPR compliance features
+- Improved user interface and accessibility
+- Bug fixes and performance improvements
+
+### Installation
+1. Download the \`MacForge-${{ steps.get_tag.outputs.TAG }}.zip\` file
+2. Unzip the archive
+3. Drag \`MacForge.app\` to your Applications folder
+4. Launch MacForge
+
+### System Requirements
+- macOS 15.5 (Sonoma) or later
+- 100 MB available disk space"
         fi
-      continue-on-error: true
-    
-    - name: Generate Checksums
-      run: |
-        echo "Generating checksums..."
-        if [ -f "MacForge-v${{ steps.version.outputs.version }}.zip" ]; then
-          shasum -a 256 "MacForge-v${{ steps.version.outputs.version }}.zip" > "MacForge-v${{ steps.version.outputs.version }}.zip.sha256"
-        fi
-        if [ -f "MacForge-v${{ steps.version.outputs.version }}.dmg" ]; then
-          shasum -a 256 "MacForge-v${{ steps.version.outputs.version }}.dmg" > "MacForge-v${{ steps.version.outputs.version }}.dmg.sha256"
-        fi
-    
-    - name: Upload Release Assets
-      uses: actions/upload-artifact@v4
-      with:
-        name: release-assets
-        path: |
-          MacForge-v${{ steps.version.outputs.version }}.zip
-          MacForge-v${{ steps.version.outputs.version }}.dmg
-          MacForge-v${{ steps.version.outputs.version }}.zip.sha256
-          MacForge-v${{ steps.version.outputs.version }}.dmg.sha256
-        retention-days: 30
-    
+        
+        # Escape newlines and double quotes for JSON
+        RELEASE_NOTES="${RELEASE_NOTES//'%'/'%25'}"
+        RELEASE_NOTES="${RELEASE_NOTES//$'\n'/'%0A'}"
+        RELEASE_NOTES="${RELEASE_NOTES//$'\r'/'%0D'}"
+        echo "release_body=$RELEASE_NOTES" >> $GITHUB_OUTPUT
+
     - name: Create GitHub Release
+      id: create_release
       uses: softprops/action-gh-release@v1
       with:
-        tag_name: ${{ github.ref }}
-        name: MacForge v${{ steps.version.outputs.version }}
-        body_path: RELEASE_NOTES.md
-        files: |
-          MacForge-v${{ steps.version.outputs.version }}.zip
-          MacForge-v${{ steps.version.outputs.version }}.dmg
-          MacForge-v${{ steps.version.outputs.version }}.zip.sha256
-          MacForge-v${{ steps.version.outputs.version }}.dmg.sha256
+        tag_name: ${{ steps.get_tag.outputs.TAG }}
+        name: Release ${{ steps.get_tag.outputs.TAG }}
+        body: ${{ steps.read_release_notes.outputs.release_body }}
         draft: false
         prerelease: false
+        files: |
+          ${{ env.RELEASE_ZIP_PATH }}
+          ${{ env.RELEASE_CHECKSUM_PATH }}
+        generate_release_notes: true
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
